// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## Unreleased
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add an `client.knative.dev/updateTimestamp` annotation to trigger a new revision when required
| https://github.com/knative/client/pull/1364[#1364]

| 🎁
| Adding darwin/arm64 support to kn
| https://github.com/knative/client/pull/1401[#1401]

| 🎁
| Adding base64 data handling to ping update command
| https://github.com/knative/client/pull/1392[#1392], https://github.com/knative/client/pull/1388[#1388]

| ✨
| make --cmd flag as an array instead of string
| https://github.com/knative/client/pull/1380[#1380]

|===

## v0.24.0 (2021-06-29)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Prettify printing of webhook warnings
| https://github.com/knative/client/pull/1353[#1353]

| ✨
| Update Kubernetes dependencies to v0.20.7
| https://github.com/knative/client/pull/1344[#1344]

| ✨
| Increase code coverage for Sources #1343
| https://github.com/knative/client/pull/1343[#1343]

| ✨
| Make e2e test run over other networks
| https://github.com/knative/client/pull/1339[#1339]

| 🎁
| Add `env-value-from` flag & keep order of env vars as provided
| https://github.com/knative/client/pull/1328[#1328]

| 🐛
| Fix Subscription's Channel to use KRefence type
| https://github.com/knative/client/pull/1326[#1326]
|===

## v0.23.0 (2021-05-18)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix number of instances *int32 type in describe commands
| https://github.com/knative/client/pull/1312[#1312]

| 🐛
| Use fully qualified test images
| https://github.com/knative/client/pull/1307[#1307]

| 🐣
| Fix for serviceaccounts "default" not found flaky issue